test/files/neg/bug696.check
bug696.scala:4: error: diverging implicit expansion for type TypeUtil0.Type[Any]
starting with method WithType in object TypeUtil0
  as[Any](null);
         ^
one error found
